P4ADEV-3436 fix mapper and junit